--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "moment": "^2.24.0",
     "node-fetch": "^2.3.0",
-    "node-notifier": "^5.4.0"
+    "openurl": "^1.1.1",
+    "pokedex-promise-v2": "^3.1.1"
   }
 }
